# govbrnews-mcp

./: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  LICENSE  MCP_CONFIG_CLAUDE_CODE.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  README.md  STATUS.md  TESTING_GUIDE.md  TESTING_RESULTS.md  TEST_RESULTS_FINAL.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  PHASE5_RESULTS.md  TEMPORAL_GRANULARITY.md  USAGE.md
src/govbrnews_mcp/: __init__.py  __main__.py  config.py  server.py  typesense_client.py
src/govbrnews_mcp/resources/: __init__.py  agencies.py  news.py  stats.py  themes.py
src/govbrnews_mcp/tools/: __init__.py  facets.py  search.py  similar.py  temporal.py
src/govbrnews_mcp/utils/: __init__.py  formatters.py  temporal.py
tests/: conftest.py  test_advanced_tools.py  test_config.py  test_formatters.py  test_prompts.py  test_resources.py  test_search_tool.py  test_temporal.py  test_typesense_client.py
